tests/src/snapshots/valid__method_def_no_params_with_body.snap
---
source: tests/src/valid.rs
expression: "def someMethod() = { 47 }"
---

=== Source ===
def someMethod() = { 47 }

=== Tokens ===
[
    KeywordDef(
        0,
        3,
    ),
    Identifier(
        4,
        14,
    ),
    LeftParen(
        14,
        15,
    ),
    RightParen(
        15,
        16,
    ),
    Equals(
        17,
        18,
    ),
    LeftBrace(
        19,
        20,
    ),
    DecimalDigits(
        21,
        23,
    ),
    RightBrace(
        24,
        25,
    ),
]

=== Comments ===
{}

=== AST ===
Ok(
    Module {
        start: 0,
        end: 25,
        imports: [],
        body: [
            MethodDefinition {
                start: 0,
                end: 25,
                name: Identifier {
                    start: 4,
                    end: 14,
                    name: "someMethod",
                    qualifier: None,
                    inferred_type: Unknown,
                },
                params: [],
                body: Block {
                    start: 19,
                    end: 25,
                    params: [],
                    body: [
                        NumericLiteral {
                            start: 21,
                            end: 23,
                            value: Int(
                                47,
                            ),
                            raw_value: "47",
                            inferred_type: Unknown,
                        },
                    ],
                    inferred_type: Unknown,
                },
                inferred_type: Unknown,
            },
        ],
    },
)
