tests/src/snapshots/valid__method_def_with_params.snap
---
source: tests/src/valid.rs
expression: "def someMethod() = { a, b => 47 }"
---

=== Source ===
def someMethod() = { a, b => 47 }

=== Tokens ===
[
    KeywordDef(
        0,
        3,
    ),
    Identifier(
        4,
        14,
    ),
    LeftParen(
        14,
        15,
    ),
    RightParen(
        15,
        16,
    ),
    Equals(
        17,
        18,
    ),
    LeftBrace(
        19,
        20,
    ),
    Identifier(
        21,
        22,
    ),
    Comma(
        22,
        23,
    ),
    Identifier(
        24,
        25,
    ),
    DoubleArrow(
        26,
        28,
    ),
    DecimalDigits(
        29,
        31,
    ),
    RightBrace(
        32,
        33,
    ),
]

=== Comments ===
{}

=== AST ===
Ok(
    Module {
        start: 0,
        end: 33,
        imports: [],
        body: [
            MethodDefinition {
                start: 0,
                end: 33,
                name: Identifier {
                    start: 4,
                    end: 14,
                    name: "someMethod",
                    inferred_type: Unknown,
                },
                params: [],
                body: Block {
                    start: 19,
                    end: 33,
                    params: [
                        Identifier {
                            start: 21,
                            end: 22,
                            name: "a",
                            inferred_type: Unknown,
                        },
                        Identifier {
                            start: 24,
                            end: 25,
                            name: "b",
                            inferred_type: Unknown,
                        },
                    ],
                    body: [
                        NumericLiteral {
                            start: 29,
                            end: 31,
                            value: Int(
                                47,
                            ),
                            raw_value: "47",
                            inferred_type: Unknown,
                        },
                    ],
                    inferred_type: Unknown,
                },
                inferred_type: Unknown,
            },
        ],
    },
)
