tests/src/snapshots/valid__non_call_block_after_identifier.snap
---
source: tests/src/valid.rs
expression: "x\n{}"
---

=== Source ===
x
{}

=== Tokens ===
[
    Identifier(
        0,
        1,
    ),
    LineBreak(
        1,
        2,
    ),
    LeftBrace(
        2,
        3,
    ),
    RightBrace(
        3,
        4,
    ),
]

=== Comments ===
{}

=== AST ===
Ok(
    Module {
        start: 0,
        end: 4,
        imports: [],
        body: [
            Identifier {
                start: 0,
                end: 1,
                name: "x",
                qualifier: None,
                inferred_type: Unknown,
            },
            Block {
                start: 2,
                end: 4,
                params: [],
                body: [],
                inferred_type: Unknown,
            },
        ],
    },
)
