tests/src/snapshots/valid__non_call_multiple_lines.snap
---
source: tests/src/valid.rs
expression: "thing\n(just, a, tuple)"
---

=== Source ===
thing
(just, a, tuple)

=== Tokens ===
[
    IdentifierLower(
        0,
        5,
    ),
    LineBreak(
        5,
        6,
    ),
    LeftParen(
        6,
        7,
    ),
    IdentifierLower(
        7,
        11,
    ),
    Comma(
        11,
        12,
    ),
    IdentifierLower(
        13,
        14,
    ),
    Comma(
        14,
        15,
    ),
    IdentifierLower(
        16,
        21,
    ),
    RightParen(
        21,
        22,
    ),
]

=== Comments ===
{}

=== AST ===
Ok(
    Module {
        start: 0,
        end: 22,
        imports: [],
        body: [
            Identifier {
                start: 0,
                end: 5,
                name: "thing",
                inferred_type: Unknown,
            },
            Tuple {
                start: 6,
                end: 22,
                entries: [
                    Identifier {
                        start: 7,
                        end: 11,
                        name: "just",
                        inferred_type: Unknown,
                    },
                    Identifier {
                        start: 13,
                        end: 14,
                        name: "a",
                        inferred_type: Unknown,
                    },
                    Identifier {
                        start: 16,
                        end: 21,
                        name: "tuple",
                        inferred_type: Unknown,
                    },
                ],
                inferred_type: Unknown,
            },
        ],
    },
)
