tests/src/snapshots/valid__number.snap
---
source: tests/src/valid.rs
expression: "47"
---

=== Source ===
47

=== Tokens ===
[
    DecimalDigits(
        0,
        2,
    ),
]

=== Comments ===
{}

=== AST ===
Ok(
    Module {
        start: 0,
        end: 2,
        imports: [],
        body: [
            NumericLiteral {
                start: 0,
                end: 2,
                value: Int(
                    47,
                ),
                raw_value: "47",
                inferred_type: Unknown,
            },
        ],
    },
)
