tests/src/snapshots/valid__qualified_identifier.snap
---
source: tests/src/valid.rs
expression: "qual:hello"
---

=== Source ===
qual:hello

=== Tokens ===
[
    Identifier(
        0,
        4,
    ),
    Colon(
        4,
        5,
    ),
    Identifier(
        5,
        10,
    ),
]

=== Comments ===
{}

=== AST ===
Ok(
    Module {
        start: 0,
        end: 10,
        imports: [],
        body: [
            Identifier {
                start: 0,
                end: 10,
                name: "hello",
                qualifier: Some(
                    Identifier {
                        start: 0,
                        end: 4,
                        name: "qual",
                        qualifier: None,
                        inferred_type: Unknown,
                    },
                ),
                inferred_type: Unknown,
            },
        ],
    },
)
