tests/src/snapshots/valid__reassignment_variable.snap
---
source: tests/src/valid.rs
expression: "x := 47"
---

=== Source ===
x := 47

=== Tokens ===
[
    Identifier(
        0,
        1,
    ),
    ColonEquals(
        2,
        4,
    ),
    DecimalDigits(
        5,
        7,
    ),
]

=== Comments ===
{}

=== AST ===
Ok(
    Module {
        start: 0,
        end: 7,
        imports: [],
        body: [
            Reassignment {
                start: 0,
                end: 7,
                left: Identifier {
                    start: 0,
                    end: 1,
                    name: "x",
                    inferred_type: Unknown,
                },
                right: NumericLiteral {
                    start: 5,
                    end: 7,
                    value: Int(
                        47,
                    ),
                    raw_value: "47",
                    inferred_type: Unknown,
                },
                inferred_type: Unknown,
            },
        ],
    },
)
