tests/src/snapshots/valid__string.snap
---
source: tests/src/valid.rs
expression: "\"hello\""
---

=== Source ===
"hello"

=== Tokens ===
[
    StringLiteral(
        1,
        6,
    ),
]

=== Comments ===
{}

=== AST ===
Ok(
    Module {
        start: 0,
        end: 6,
        imports: [],
        body: [
            StringLiteral {
                start: 1,
                end: 6,
                value: "hello",
                inferred_type: Unknown,
            },
        ],
    },
)
