tests/src/snapshots/valid__string_with_interpolation.snap
---
source: tests/src/valid.rs
expression: "\"hello $(name)!\""
---

=== Source ===
"hello $(name)!"

=== Tokens ===
[
    StringLiteral(
        1,
        7,
    ),
    InterpolationStart(
        8,
        9,
    ),
    Identifier(
        9,
        13,
    ),
    InterpolationEnd(
        13,
        14,
    ),
    StringLiteral(
        14,
        15,
    ),
]

=== Comments ===
{}

=== AST ===
Ok(
    Module {
        start: 0,
        end: 15,
        imports: [],
        body: [
            StringInterpolation {
                start: 1,
                end: 15,
                parts: [
                    StringLiteral {
                        start: 1,
                        end: 7,
                        value: "hello ",
                        inferred_type: Unknown,
                    },
                    Identifier {
                        start: 9,
                        end: 13,
                        name: "name",
                        inferred_type: Unknown,
                    },
                    StringLiteral {
                        start: 14,
                        end: 15,
                        value: "!",
                        inferred_type: Unknown,
                    },
                ],
                inferred_type: Unknown,
            },
        ],
    },
)
